--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">hackit2.0</string>
+    <string name="app_name">notesApp</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="random_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
 </resources>
